style: use source sans pro font in-app
https://fonts.adobe.com/fonts/source-sans

--- a/src/popup.css
+++ b/src/popup.css
@@ -3,8 +3,9 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 14px;
+  line-height: 1.28;
   margin: 0;
   width: 640px;
 }
