--- a/src/popup.css
+++ b/src/popup.css
@@ -3,9 +3,9 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  line-height: 1.28;
+  line-height: 1.25;
   margin: 0;
-  width: 640px;
+  width: 540px;
 }
