--- a/src/sources/hacker-news/index.css
+++ b/src/sources/hacker-news/index.css
@@ -3,3 +3,8 @@
   --header-border-color: hsl(19, 87%, 55%);
   --result-points-color: hsl(19, 87%, 55%);
 }
+
+.app[data-source="Hacker News"][data-dark-mode="true"] {
+  --header-background-color: hsla(19, 87%, 55%, 0.15);
+  --header-border-color: hsl(19, 87%, 55%);
+}
