--- a/src/popup.css
+++ b/src/popup.css
@@ -1,10 +1,11 @@
 html {
+  font-size: 100%;
   overflow-y: hidden;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 0.875rem; /* 14px */
   line-height: 1.25;
   margin: 0;
   width: 540px;
